--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -16,6 +16,7 @@ set-option -g status-position top
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin "https://gitlab.com/motaz-shokry/gruvbox-tmux"
+set -g @plugin "christoomey/vim-tmux-navigator"
 
 # Other examples:
 # set -g @plugin 'github_username/plugin_name'
