--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -10,6 +10,8 @@ bind-key j select-pane -D
 bind-key k select-pane -U
 bind-key l select-pane -R
 
+bind-key S new-session
+
 set-option -g status-position top
 
 # List of plugins
