--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -2,6 +2,7 @@ unbind r
 bind r source-file ~/.tmux.conf
 
 set -g prefix C-s
+unbind C-b
 
 set -g mouse on
 
@@ -10,21 +11,16 @@ bind-key j select-pane -D
 bind-key k select-pane -U
 bind-key l select-pane -R
 
-bind-key S new-session
+bind-key C new-session
+bind-key c new-window
+
+bind-key s choose-window
 
 set-option -g status-position top
 
-# List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin "https://gitlab.com/motaz-shokry/gruvbox-tmux"
 set -g @plugin "christoomey/vim-tmux-navigator"
 
-# Other examples:
-# set -g @plugin 'github_username/plugin_name'
-# set -g @plugin 'github_username/plugin_name#branch'
-# set -g @plugin 'git@github.com:user/plugin'
-# set -g @plugin 'git@bitbucket.com:user/plugin'
-
-# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
