tmux: bind split window keys to more concise/intuitive ones

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -16,6 +16,9 @@ bind-key c new-window
 
 bind-key s choose-window
 
+bind-key v split-window -v
+bind-key h split-window -h
+
 set-option -g status-position top
 
 set -g @plugin 'tmux-plugins/tpm'
